<resources>
    <string name="app_name">ShareCare</string>
    <string name="title_home">Servicios disponibles</string>
    <string name="title_dashboard">Solicitudes enviadas</string>
    <string name="title_notifications">Solicitudes recibidas</string>
    <string name="app_title">ShareCare App</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_username">Usuario</string>
    <string name="button_login">LOGIN</string>
    <string name="login_register">Regístrate</string>
    <string name="servicio_list_fullname_title">Nombre:</string>
    <string name="servicio_list_localidad_title">Localidad:</string>
    <string name="logout">LogOut</string>
    <string name="enviadas_list_descripcion_title">Descripción:</string>
    <string name="enviadas_list_destinatario_title">Destinatario:</string>
    <string name="recibidas_list_solicitante_title">Solicitante:</string>
    <string name="recibidas_list_descripcion_title">Descripción:</string>
    <string name="recibidas_list_phone_title">Teléfono:</string>
    <string name="register_username_hint">Nombre de usuario</string>
    <string name="register_fullname_hint">Nombre completo</string>
    <string name="register_phone_hint">Teléfono</string>
    <string name="register_hint_localidad">Localidad</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password2">Repita la password</string>
    <string name="register_checkbox_servicio">¿Ofrece el servicio de cuidados a domicilio?</string>
    <string name="register_precio_hint">Precio por hora</string>
    <string name="btn_register_upload_img">Subir imagen</string>
    <string name="btn_register_send">Registrar</string>
    <string name="btn_profile_save">Guardar</string>
    <string name="editProfile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_detalle_precio_title">Precio por hora (€):</string>
    <string name="btn_detalle_user_newsolicitud">Enviar solicitud</string>
    <string name="detalle_user_comentario_solicitud">Escriba brevemente el objeto de su solicitud</string>
    <string name="detalle_solicitud_title">DETALLE DE SOLICITUD</string>
    <string name="detalle_solicitud_fecha_title">Fecha:</string>
    <string name="detalle_solicitud_destinatario_title">Destinatario:</string>
    <string name="detalle_solicitud_comentario_title">Comentario:</string>
    <string name="detalle_solicitud_btn_guardar">guardar</string>
    <string name="detalle_solicitud_btn_eliminar">eliminar</string>
    <string name="detalle_solicitud_remitente_title">Remitente:</string>
    <string name="detalle_solicitud_phone_remitente_title">Teléfono:</string>
    <string name="hint_disponibles_localidad_buscar">Localidad a buscar</string>
</resources>