<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/register_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="168dp"
        android:layout_height="202dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_user_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-120dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_username_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_fullname_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/register_username"
            app:layout_constraintStart_toStartOf="@+id/register_username"
            app:layout_constraintTop_toBottomOf="@+id/register_username" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/register_fullname"
            app:layout_constraintStart_toStartOf="@+id/register_fullname"
            app:layout_constraintTop_toBottomOf="@+id/register_fullname" />

        <EditText
            android:id="@+id/register_localidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_hint_localidad"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/register_phone"
            app:layout_constraintStart_toStartOf="@+id/register_phone"
            app:layout_constraintTop_toBottomOf="@+id/register_phone" />


        <Button
            android:id="@+id/button_register_img_upload"
            android:layout_width="168dp"
            android:layout_height="55dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_register_upload_img"
            app:layout_constraintBottom_toBottomOf="@+id/register_image"
            app:layout_constraintEnd_toEndOf="@+id/editTextPrecioHora"
            app:layout_constraintStart_toEndOf="@+id/register_image"
            app:layout_constraintTop_toTopOf="@+id/register_image" />

        <ImageView
            android:id="@+id/register_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="@+id/editTextPrecioHora"
            app:layout_constraintTop_toBottomOf="@+id/editTextPrecioHora"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_localidad" />

        <EditText
            android:id="@+id/editTextRegisterPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_password2"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

        <CheckBox
            android:id="@+id/checkBoxServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_checkbox_servicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword2" />

        <EditText
            android:id="@+id/editTextPrecioHora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_precio_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/checkBoxServicio"
            app:layout_constraintStart_toStartOf="@+id/checkBoxServicio"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxServicio" />

        <Button
            android:id="@+id/buttonRegisterSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_register_send"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>