<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <ProgressBar
        android:id="@+id/profile_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="168dp"
        android:layout_height="202dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_user_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-120dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/profile_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_fullname_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/buttonProfileSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/profile_fullname"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profile_fullname"
            app:layout_constraintTop_toBottomOf="@+id/profile_fullname" />

        <EditText
            android:id="@+id/profile_localidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_hint_localidad"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/profile_phone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profile_phone"
            app:layout_constraintTop_toBottomOf="@+id/profile_phone" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <CheckBox
            android:id="@+id/checkBoxProfileServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_checkbox_servicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_localidad" />

        <EditText
            android:id="@+id/editTextProfilePrecioHora"
            android:layout_width="192dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/register_precio_hint"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/checkBoxProfileServicio"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxProfileServicio" />

        <Button
            android:id="@+id/buttonProfileSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_profile_save"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProfilePrecioHora" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>