<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detalleSolicitudRecibida_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_default_img_background"
    android:padding="16dp"
    tools:context=".ui.recibidas.SolicitudRecibidaDetalleActivity">

    <ProgressBar
        android:id="@+id/detalleSolicitudRecibida_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="168dp"
        android:layout_height="202dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_solicitud_title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleFechaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/detalle_solicitud_fecha_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetalleTitle" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSolicitudRecibidaDetalleFechaTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewSolicitudRecibidaDetalleFechaTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewSolicitudRecibidaDetalleFechaTitle" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleRemitenteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detalle_solicitud_remitente_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewSolicitudRecibidaDetalleFechaTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetalleFechaTitle" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleRemitente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textViewSolicitudRecibidaDetalleRemitenteTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetalleRemitenteTitle" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleComentarioTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detalle_solicitud_comentario_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewSolicitudRecibidaDetalleRemitenteTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetallePhoneRemitenteTitle" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetalleComentario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewSolicitudRecibidaDetalleComentarioTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetalleComentarioTitle" />

    <Button
        android:id="@+id/buttonSolicitudRecibidaDetalleEliminar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_error"
        android:text="@string/detalle_solicitud_btn_eliminar"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetalleComentario" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetallePhoneRemitenteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detalle_solicitud_phone_remitente_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolicitudRecibidaDetalleRemitente" />

    <TextView
        android:id="@+id/textViewSolicitudRecibidaDetallePhoneRemitente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSolicitudRecibidaDetallePhoneRemitenteTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewSolicitudRecibidaDetallePhoneRemitenteTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewSolicitudRecibidaDetallePhoneRemitenteTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>